<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dmabuf_transport_test</name>
  <version>1.0.0</version>
  <description>Test package for dmabuf transport</description>
  <maintainer email="penwang@qti.qualcomm.com">Peng Wang</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>dmabuf_transport</depend>
  <depend>pcl_conversions</depend>

  <exec_depend>libpcl-common</exec_depend>
  <exec_depend>libpcl-io</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
